@@ -32,5 +32,5 @@ It comes included with the Apache Lucene document database.
   s.add_dependency('orm_adapter', ">= 0.0.3")
   s.add_dependency("activemodel", ">= 3.0.0", "< 3.3")
   s.add_dependency("railties", ">= 3.0.0", "< 3.3")
-  s.add_dependency("neo4j-wrapper", '2.2.0')
+  s.add_dependency("neo4j-wrapper", '2.2.1')
 end
