@@ -13,7 +13,7 @@ describe Neo4j::Rails::Middleware, :type => :integration do
   it "always reset the threadlocal_ref_node" do
     my_ref_node = Neo4j::Rails::Model.create
     Neo4j.threadlocal_ref_node = my_ref_node
-    Neo4j.ref_node.should == my_ref_node
+    Neo4j.ref_node.should == my_ref_node._java_node
 
     app = mock('app')
     closer = Neo4j::Rails::Middleware.new(app)
